--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="container">
     
         <h1 class="title"><i class="fas fa-map-marked-alt icono"></i> Je suis là</h1>
-        <p class="introduccion">Je-suis-là ("I'm here" in English, pronounced /ʒə sɥi la/) is a simple library powered by OpenLayers and OpenStreetMaps. Its main goal is to quickly generate a map with a fixed pointer, without having to study Geolocation. It's useful for customers who want a map with their company's location pinned. It's free and you just have to indicate the latitude and longitude (you can easily find those values on OpenStreetMaps in the url bar).</p>
+        <p class="introduccion">Je-suis-là ("I'm here" in English, pronounced /ʒə sɥi la/) is a simple Vanilla JavaScript library powered by OpenLayers and OpenStreetMaps. Its main goal is to quickly generate a map with a fixed pointer, without having to study Geolocation. It's useful for customers who want a map with their company's location pinned. It's free and you just have to indicate the latitude and longitude (you can easily find those values on OpenStreetMaps in the url bar).</p>
         <div class="row">
           <div class="col-sm-12 justify-content-center">
             <form>
